--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading &hellip;...</my-app>
+    <my-app>Loading &hellip;</my-app>
   </body>
 </html>
 
